# celestial_sphere

./: .gitattributes  .gitignore  CMakeLists.txt  package.xml
launch/: celestial_sphere.launch
media/materials/programs/: just_texture.frag
models/celestial_sphere/: celestial_sphere.blend  celestial_sphere.dae  celestial_sphere.sdf  model.config
models/celestial_sphere/materials/scripts/: celestial_sphere.material
models/celestial_sphere/materials/textures/: starmap_2020_8k.exr
worlds/: celestial_sphere.world
