<?xml version="1.0"?>
<package format="2">
  <name>celestial_sphere</name>
  <version>0.0.0</version>
  <description>The package contains celestial sphere model for gazebo simulator</description>

  <maintainer email="standmit@yandex.ru">Andrey Stepanov</maintainer>


  <license>MIT</license>


  <author email="standmit@yandex.ru">Andrey Stepanov</author>


  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>gazebo_ros</exec_depend>


  <export>
    <gazebo_ros
        gazebo_media_path="${prefix}"
        gazebo_model_path="${prefix}/models"
    />
  </export>
</package>
